documents header shown only if they exist, margin on fixture review page shifted

--- a/src/index.css
+++ b/src/index.css
@@ -275,8 +275,8 @@ a:active {
 /* Fixture Page */
 .fixture-details {
   font-size: 1.3em;
-  margin-top: 15px;
-  margin-left: 20px;
+  margin-top: 25px;
+  margin-left: 36px;
   margin-right: 20px;
 }
 
